--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,13 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".Near_me" />
         <activity android:name=".VendorActivity"></activity>
+        <activity android:name=".add" />
+        <activity android:name=".display" />
+        <activity android:name=".recycle"></activity>
+        <activity android:name=".view"></activity>
+
+        <uses-feature android:name="android.hardware.camera"
+            android:required="true" />
     </application>
 
 </manifest>
