--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,29 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity">
+        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".Near_me" />
+        <activity android:name=".VendorActivity" />
+        <activity android:name=".add" />
+        <activity android:name=".recycle"></activity>
+        <activity android:name=".vendor_dashboard"></activity>
+        <!--<activity android:name=".display" />-->
+
+
+        <activity android:name=".LaunchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity" />
-        <activity android:name=".Near_me" />
-        <activity android:name=".VendorActivity"></activity>
-        <activity android:name=".add" />
-        <activity android:name=".recycle"></activity>
-        <activity android:name=".vendor_dashboard"></activity>
-
-        <uses-feature android:name="android.hardware.camera"
-            android:required="true" />
+        <activity android:name=".SignupActivity" />
+        <activity android:name=".SelectActionActivity"></activity>
     </application>
+
+    <uses-feature
+        android:name="android.hardware.camera"
+        android:required="true" />
 
 </manifest>
