--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-storage:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.android.support:appcompat-v7:22.1.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
