--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,7 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:10.0.1'
     compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'com.google.android.gms:play-services-location:10.0.1'
-    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.firebase:geofire-android:2.1.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
