--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme">
-        <activity android:name=".Registration.LoginActivity" />
+        <activity android:name=".Registration.LoginActivity" android:theme="@style/nobar" />
         <activity android:name=".MainActivity" />
         <activity android:name=".Near_me" />
         <activity android:name=".Shop.add" />
@@ -33,13 +33,13 @@
         <activity android:name=".Shop.vendor_dashboard" />
         <!-- <activity android:name=".display" /> -->
 
-        <activity android:name=".Registration.LaunchActivity">
+        <activity android:name=".Registration.LaunchActivity" android:theme="@style/nobar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Registration.SignupActivity" />
+        <activity android:name=".Registration.SignupActivity" android:theme="@style/nobar" />
         <activity android:name=".SelectActionActivity" />
 
         <provider
