--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'com.google.android.gms:play-services-location:10.0.1'
     compile 'com.firebase:geofire-android:2.1.3'
+    compile 'com.google.android.gms:play-services:10.0.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
